homarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
  namespace: homarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homarr
  template:
    metadata:
      labels:
        app: homarr
    spec:
      containers:
      - name: homarr
        image: ghcr.io/ajnart/homarr:latest
        ports:
        - containerPort: 7575
          protocol: TCP
        volumeMounts:
        - name: homarr-configs
          mountPath: /app/data/configs
        - name: homarr-icons
          mountPath: /app/public/icons
        - name: homarr-data
          mountPath: /data
      volumes:
      - name: homarr-data
        persistentVolumeClaim:
          claimName: homarr-pvc
      - name: homarr-configs
        persistentVolumeClaim:
          claimName: homarr-pvc
      - name: homarr-icons
        persistentVolumeClaim:
          claimName: homarr-pvc
